# cosmic-weather

./: Cargo.toml  LICENSE  README.md  justfile
i18n/en/: cosmic_weather.ftl
i18n/pt/: cosmic_weather.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  main.rs  weather.rs
