[package]
name = "cosmic-weather"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Weather applet for COSMIC™"
repository = "https://github.com/marcos/cosmic-weather"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
